<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.yuanyuansapplication.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSignUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_31pxh"
        android:paddingStart="@dimen/_31pxh" style="@style/groupStyle">
        <TextView android:ellipsize="end"
            android:id="@+id/txtPageheading"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_112pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtPageheading}"
            style="@style/txtRobotoregular24" tools:text="@string/lbl_sign_up2"/>

        <TextView
            android:id="@+id/txtEmail"
            style="@style/txtRobotoregular18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60pxv"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtEmail}"
            tools:text="@string/lbl_e_mail" />

        <EditText android:ellipsize="end"
            android:hint="@string/msg_someone_gmail_com"
            android:id="@+id/etEmail" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.04" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etEmailValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRobotoregular12" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPhonenumber"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtPhonenumber}"
            style="@style/txtRobotoregular18" tools:text="@string/lbl_phone_number"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_2451369850"
            android:id="@+id/etPhoneNumber" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.16" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etPhoneNumberValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRobotoregular12" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtPassword}"
            style="@style/txtRobotoregular18" tools:text="@string/lbl_password"/>
        <EditText android:ellipsize="end" android:hint="@string/msg"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.16" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etPasswordValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRobotoregular12" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="@dimen/_42pxv"
            android:layout_marginStart="@dimen/_49pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_200pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.04" android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtConfirmation}"
            style="@style/txtRobotoregular10_1" tools:text="@string/msg_already_have_an"/>
        <LinearLayout android:id="@+id/linearRowsignin"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:gravity="bottom"
                android:id="@+id/txtSignin"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.04" android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtSignin}"
                style="@style/txtRobotoregular10_2" tools:text="@string/lbl_sign_in2"/>
            <ImageView android:id="@+id/imageArrowrightOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_width="@dimen/_16pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_right"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_right"/>
        </LinearLayout>
    </LinearLayout>
</layout>
