<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.yuanyuansapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSignIn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_31pxh"
        android:paddingStart="@dimen/_31pxh" style="@style/groupStyle">
        <TextView android:ellipsize="end"
            android:id="@+id/txtPageheading"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_112pxh"
            android:layout_marginTop="@dimen/_59pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtPageheading}"
            style="@style/txtRobotoregular24" tools:text="@string/lbl_sign_in"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtEmail}"
            style="@style/txtRobotoregular18" tools:text="@string/lbl_e_mail"/>
        <EditText android:ellipsize="end"
            android:hint="@string/msg_someone_gmail_com"
            android:id="@+id/etEmail" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.04" android:singleLine="true"
            android:text="@={signInVM.signInModel.etEmailValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRobotoregular12" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtPassword}"
            style="@style/txtRobotoregular18" tools:text="@string/lbl_password"/>
        <EditText android:ellipsize="end" android:hint="@string/msg"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.16" android:singleLine="true"
            android:text="@={signInVM.signInModel.etPasswordValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRobotoregular12" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowkeepmelogged"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:id="@+id/checkBoxKeepMeLoggedIn"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.04" android:singleLine="true"
                android:text="@string/msg_keep_me_logged_in"
                android:textColor="@color/white_A700"
                android:textFontWeight="400"
                android:textSize="@dimen/_10pxh"
                android:textStyle="normal" tools:text="@string/msg_keep_me_logged_in"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotpassword"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_91pxh"
                android:layout_width="wrap_content"
                android:letterSpacing="0.04" android:singleLine="true"
                android:text="@{signInVM.signInModel.txtForgotpassword}"
                style="@style/txtRobotoregular10_1" tools:text="@string/msg_forgot_password"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignIn"
            android:layout_height="@dimen/_42pxv"
            android:layout_marginStart="@dimen/_49pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_200pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_sign_in2"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_77pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.04" android:singleLine="true"
            android:text="@{signInVM.signInModel.txtConfirmation}"
            style="@style/txtRobotoregular10_1" tools:text="@string/msg_don_t_have_an_account"/>
        <LinearLayout android:id="@+id/linearSignupbutton"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:gravity="bottom"
                android:id="@+id/txtSignup"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.04" android:singleLine="true"
                android:text="@{signInVM.signInModel.txtSignup}"
                style="@style/txtRobotoregular10_2" tools:text="@string/lbl_sign_up"/>
            <ImageView android:id="@+id/imageArrowrightOne"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_width="@dimen/_16pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_right"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_right"/>
        </LinearLayout>
    </LinearLayout>
</layout>
